nova_tests/negative_capability/peer_path_leak_setup/leaker.nv
// Plan 42.15 Ф.3: peer B — НЕ импортирует target. Пытается
// использовать `tgt.helper_value()` — alias `tgt` принадлежит
// peer A (importer.nv), Rule C: imports НЕ shared между peers.
// Должна быть compile error на Path-form head `tgt`.

module peer_path_leak_setup.leaker

export fn leak_attempt() -> int =>
    tgt.helper_value()
